# polytradingterminal

./: .gitignore  README.md  backtest_results.csv  poly_gui.pyw  poly_monitor.log.1  poly_monitor.log.2  poly_monitor.pyw  pyproject.toml
docs/: autostart.md
src/poly/: __main__.py  api.py  backtest.py  dashboard.py  engine.py  gui.py  main.py  models.py  monitor.py  notify.py  portfolio.py  scanner.py
src/poly/factors/: __init__.py  disposition.py  divergence.py  pairs.py  velocity.py
src/polytradingterminal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
